# sg-urban-insights

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: lineage.md
sample_data/marts/dimensions/: dim_bus_stop.parquet  dim_service.parquet  dim_time.parquet
sample_data/marts/facts/: fact_bus_arrivals.parquet
src/sg_insights/: __init__.py  config.py
src/sg_insights/dashboard/: __init__.py  app.py
src/sg_insights/etl/: __init__.py  lta_marts.py
tests/: test_etl.py
